--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v6
         with:
-          go-version: "^1"
+          go-version: "1.24.11"
       - name: Setup golangci-lint
         uses: golangci/golangci-lint-action@v9
         with:
